z-index fix

--- a/src/sass/components/_trailer.scss
+++ b/src/sass/components/_trailer.scss
@@ -66,7 +66,6 @@
   display: flex;
 }
 .trailer__link:hover,.trailer__link:focus{
-  z-index: -1;
   cursor: pointer;
   position: relative;
   &::after{
